--- a/aboutme.html
+++ b/aboutme.html
@@ -57,7 +57,7 @@
 									</header>
 
 									<!-- Content -->
-										<h2 id="content">Research Interests</h2>
+										<!-- <h2 id="content">Research Interests</h2>
 										<p> I work on computational genomics, primarily sequence data processing methods.
 											These include sequence alignment and variant calling.
 											One of my main focuses is to reduce reference bias due to assembly artifacts and lack of genetic diversity.
@@ -68,14 +68,31 @@
 											<i>#variant calling</i> &nbsp;&nbsp;&nbsp;&nbsp; 
 											<i>#lift-over</i> &nbsp;&nbsp;&nbsp;&nbsp; 
 											<i>#pangenomics</i> 
-										</p>
-										<h2 id="content">Skills</h2>
+										</p> -->
+										<h2 id="content">Experience</h2>
 										<p> 
 											<ul>
-												<li><b>Languages</b>: Mandarin (traditional), English, Taiwanese</li>
-												<li><b>Progamming languages</b>: Python, R, C++, C, Rust</li>
-												<li><b>Hardware description language</b>: Verilog</li>
-												<li><b>Tools</b>: git, Latex, Bash, Snakemake, unittest, Docker, make, cmake</li>
+												<li> 
+													<b>Staff Software Engineer, Computational Genomics</b> (2024) </br>
+													<b>Senior Software Engineer, Computational Genomics</b> (2023-2024) </br>
+													<b>Software Engineer, Computational Genomics</b> (2022-2023) </br>
+														Exai Bio, California, USA </br>
+														<ul style="padding-left:20px">
+															<li>Develop novel computational methods for a cell-free RNA-based platform for early cancer detection.</li>
+															<li>Develop R&D and production bioinformatics pipelines.</li>
+															<li>Write design documents.</li>
+															<li>Integrate features and metadata for Exai's core machine learning models.</li>
+															<li>Analyze sequencing datasets to evaluate sequencing assays.</li>
+														</ul>
+													</li>
+													<li> <b>Research Intern</b> & <b>Student Researcher</b> (2020) </br>
+														Google, Remote, USA </br>
+														DeepVariant Team (Brain Genomics), Google Health
+													</li>
+													<li> <b>Technical Intern</b> (2016) </br>
+														Synopsys, California, USA </br>
+														IC Compiler II (ICC2) Team
+													</li>
 											</ul>
 										</p>
 										<div class="row">
@@ -96,17 +113,15 @@
 												</ul>
 											</div>
 											<div class="col-6 col-12-small">
-												<h2>Working</h2>
-												<ul class="alt">
-													<li> <b>Research Intern</b> & <b>Student Researcher</b> (2020) </br>
-														Google, Remote, USA </br>
-														DeepVariant Team (Brain Genomics), Google Health
-													</li>
-													<li> <b>Technical Intern</b> (2016) </br>
-														Synopsys, Sunnyvale, California, USA </br>
-														IC Compiler II (ICC2) Team
-													</li>
-												</ul>
+												<h2 id="content">Skills</h2>
+												<p> 
+													<ul>
+														<li><b>Languages</b>: Mandarin (traditional), English, Taiwanese</li>
+														<li><b>Progamming languages</b>: Python, R, C++, C, Rust</li>
+														<li><b>Hardware description language</b>: Verilog</li>
+														<li><b>Tools</b>: git, Latex, Bash, Snakemake, unittest, Docker, make, cmake</li>
+													</ul>
+												</p>
 											</div>
 											<!-- Break -->
 											<div class="col-6 col-12-small">
@@ -124,16 +139,20 @@
 														<b>NTU</b>: Data Compression (2015) (grad-level), Computer Architecture (2016, 2017) (upper undergrad)
 													</li>
 												</ul>
-											</div> 
-											<div class="col-6 col-12-small">
+											</div>
+											<!-- Break -->
+											<!-- <div class="col-6 col-12-small">
 												<h2>Volunteer</h2>
 												<p>I served as a volunteer with the Children of Sea club at NTU. 
 													I helped to organize four summer/winter camps for local kids in 2011-2013 at Penghu &mdash; a distant island of Taiwan. 
 													We also worked closely with local communities to held annual events and visited elder people whose children were working out of town.
 													This experience has become a big part of me. I went back to Penghu to serve one year in Wen-Ao Elementary School in 2018.
 												</p>
+											</div> -->
+											<!-- Break -->
+											<div class="col-6 col-12-small">
 												<h2>Podcast</h2>
-												<p>I co-host the <a href="https://podcasts.apple.com/us/podcast/btba-presents-生技來一刻/id1531820937">"生技來一刻" podcast</a> (in Mandarin) to interview experts in biotech to discuss career and technological advancements.
+												<p>I co-host the <a href="https://podcasts.apple.com/us/podcast/btba-presents-生技來一刻/id1531820937">"生技來一刻" podcast</a> (in Mandarin) to interview experts in biotech to discuss career and technological advancements. Out podcast channel has 100+k all-time downloads.
 												</p>
 											</div>
 										</div>
@@ -150,7 +169,7 @@
 							<li><a href="http://github.com/milkschen" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="https://www.linkedin.com/in/ncchen/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://scholar.google.com/citations?hl=en&user=JymhwIwAAAAJ&view_op=list_works&sortby=pubdate" class="icon brands alt fa-google"><span class="label">Google Scholar</span></a></li>
-							<li><span class="icon solid alt fa-envelope"></span> naechyun< at >jhu.edu</li>
+							<li><span class="icon solid alt fa-envelope"></span> naechyun.chen< at >gmail.com</li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
