--- a/index.html
+++ b/index.html
@@ -52,12 +52,10 @@
 								<h1>Nae-Chyun Chen 陳乃群</h1>
 							</header>
 							<div class="content">
-								<p><font size="3">PhD candidate at JHU CS.<br />
+								<p><font size="3">
+									<!-- PhD candidate at JHU CS.<br /> -->
 								I develop computational genomics methods.<br />
 								He/Him/His. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></p>
-								<!-- <ul class="actions">
-									<li><a href="#one" class="button next scrolly">Know more about me</a></li>
-								</ul> -->
 							</div>
 						</div>
 					</section>
@@ -73,7 +71,7 @@
 									</span>
 									<header class="major">
 										<h2><a href="aboutme.html" class="link">About Me</a></h2>
-										<p><font size="3">Education | Research | Industry Experience</font></p>
+										<p><font size="3">Experience | Education | Research</font></p>
 									</header>
 								</article>
 								<article>
@@ -82,16 +80,14 @@
 									</span>
 									<header class="major">
 										<h2><a href="research.html" class="link">Research</a></h2>
-										<!-- <p><font size="3">I develop fast and accurate computational genomics methods</font></p> -->
 									</header>
 								</article>
-								<article>
+								<!-- <article>
 									<span class="image">
 										<img src="images/ntu.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h2><a href="publication.html" class="link">Publications</a></h2>
-										<!-- <p><font size="3">I publish papers in biological journals and IEEE conferences</font></p> -->
 									</header>
 								</article>
 								<article>
@@ -100,9 +96,8 @@
 									</span>
 									<header class="major">
 										<h2><a href="life.html" class="link">Travel | Sports | Photography</a></h2>
-										<!-- <p><font size="3">Travel | Sports | Photography</font></p> -->
 									</header>
-								</article>
+								</article> -->
 							</section>
 
 						<!-- Two -->
@@ -128,7 +123,7 @@
 							<li><a href="http://github.com/milkschen" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="https://www.linkedin.com/in/ncchen/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://scholar.google.com/citations?hl=en&user=JymhwIwAAAAJ&view_op=list_works&sortby=pubdate" class="icon brands alt fa-google"><span class="label">Google Scholar</span></a></li>
-							<li><span class="icon solid alt fa-envelope"></span> naechyun< at >jhu.edu</li>
+							<li><span class="icon solid alt fa-envelope"></span> naechyun.chen< at >gmail.com</li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
