--- a/life.html
+++ b/life.html
@@ -168,7 +168,7 @@
 							<li><a href="http://github.com/milkschen" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="https://www.linkedin.com/in/ncchen/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://scholar.google.com/citations?hl=en&user=JymhwIwAAAAJ&view_op=list_works&sortby=pubdate" class="icon brands alt fa-google"><span class="label">Google Scholar</span></a></li>
-							<li><span class="icon solid alt fa-envelope"></span> naechyun< at >jhu.edu</li>
+							<li><span class="icon solid alt fa-envelope"></span> naechyun.chen< at >gmail.com</li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
