--- a/research.html
+++ b/research.html
@@ -69,7 +69,7 @@
 										include in a graph aligner ("FORGe") and developed fast software to lift over alignments ("levioSAM").</br>
 									<ul>
 										<li>Publications: 
-											<a href="https://www.biorxiv.org/content/10.1101/2022.04.27.489683">Chen <i>et al.</i> (2022, preprint)</a>, 
+											<a href="https://www.nature.com/articles/s41592-023-02069-6">Chen <i>et al.</i> (2024)</a>, 
 											<a href="https://genomebiology.biomedcentral.com/articles/10.1186/s13059-020-02229-3">Chen <i>et al.</i> (2021)</a>, 
 											<a href="https://doi.org/10.1093/bioinformatics/btab396">Mun<sup>*</sup>, Chen<sup>*</sup>, Langmead (2021)</a>, 
 											<a href="https://genomebiology.biomedcentral.com/articles/10.1186/s13059-018-1595-x">Pritt, Chen, Langmead (2018)</a></li>
@@ -94,7 +94,7 @@
 										information in variant calling. This model is more accurate than the default DeepVariant model.
 									</br>
 									<ul>
-										<li>Publications: <a href="https://doi.org/10.1101/2021.01.06.425550">Chen <i>et al.</i> (2021, preprint)</a>
+										<li>Publications: <a href="https://link.springer.com/article/10.1186/s12859-023-05294-0">Chen <i>et al.</i> (2023)</a>
 										</li>
 										<li>Presentation: Biological Data Science (virtual, 2020; poster)</li>
 										<li>Software: <a href="https://github.com/google/deepvariant">DeepVariant</a></li>
@@ -108,7 +108,7 @@
 										complex and the Adaptive Immune Receptor Repertoire (AIRR).
 									</br>
 									<ul>
-										<li>Publications: <a href=https://doi.org/10.1101/2020.11.27.399857">Lin <i>et al.</i> (2021, preprint)</a></li>
+										<li>Publications: <a href=https://www.frontiersin.org/journals/immunology/articles/10.3389/fimmu.2022.922513/full">Lin MJ<sup>*</sup>, Lin YC<sup>*</sup>, Chen<sup>*</sup> <i>et al.</i> (2022)</a></li>
 										<li>Presentation: JHU Chromatin Workshop (2019; poster)</li>
 									</ul>
 									</p>
@@ -140,7 +140,7 @@
 							<li><a href="http://github.com/milkschen" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="https://www.linkedin.com/in/ncchen/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://scholar.google.com/citations?hl=en&user=JymhwIwAAAAJ&view_op=list_works&sortby=pubdate" class="icon brands alt fa-google"><span class="label">Google Scholar</span></a></li>
-							<li><span class="icon solid alt fa-envelope"></span> naechyun< at >jhu.edu</li>
+							<li><span class="icon solid alt fa-envelope"></span> naechyun.chen< at >gmail.com</li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
