--- a/research.html
+++ b/research.html
@@ -40,8 +40,8 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="aboutme.html">About Me</a></li>
 							<li><a href="research.html">Research</a></li>
-							<li><a href="publication.html">Publications</a></li>
-							<li><a href="life.html">Life</a></li>
+							<!-- <li><a href="publication.html">Publications</a></li>
+							<li><a href="life.html">Life</a></li> -->
 						</ul>
 					</nav>
 
